# agentic-crm-task

./: .gitignore  FRONTEND_README.md  README.md  api_server.py  pyproject.toml  requirements-api.txt  serve_frontend.py  start_servers.py
ai_crm_automation/: README.md  __init__.py  config.example.json  main.py  server.py
ai_crm_automation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ai_crm_automation/agents/: __init__.py  email_agent.py  hubspot_agent.py  orchestrator_agent.py
ai_crm_automation/utils/: __init__.py  api_client.py  error_handler.py  logger.py
frontend/: index.html  script.js  styles.css
